@@ -5,7 +5,7 @@ task :annotate_models => :environment do
 
   true_re = /(true|t|yes|y|1)$/i
 
-  options={}
+  options={ :is_rake => true }
   options[:position_in_class] = ENV['position_in_class'] || ENV['position'] || 'before'
   options[:position_in_fixture] = ENV['position_in_fixture'] || ENV['position']  || 'before'
   options[:position_in_factory] = ENV['position_in_factory'] || ENV['position'] || 'before'
@@ -16,6 +16,7 @@ task :annotate_models => :environment do
   options[:require] = ENV['require'] ? ENV['require'].split(',') : []
   options[:exclude_tests] = ENV['exclude_tests'] =~ true_re
   options[:exclude_fixtures] = ENV['exclude_fixtures'] =~ true_re
+  options[:format_rdoc] = ENV['format_rdoc'] =~ true_re
   AnnotateModels.do_annotations(options)
 end
 
@@ -23,7 +24,7 @@ desc "Remove schema information from model and fixture files"
 task :remove_annotation => :environment do
   require File.expand_path(File.join(File.dirname(__FILE__), '..', 'annotate', 'annotate_models'))
   require File.expand_path(File.join(File.dirname(__FILE__), '..', 'annotate', 'active_record_patch'))
-  options={}
+  options={ :is_rake => true }
   options[:model_dir] = ENV['model_dir']
   AnnotateModels.remove_annotations(options)
 end
