@@ -1,5 +1,9 @@
 == HEAD
 
+* Widen type column so we can handle longtexts with chopping things off.
+* Skip trying to get list of models from commandline when running via Rake (was
+  preventing the use of multiple rake tasks in one command if one of them was
+  db:migrate).
 * Add ability to skip annotations for a model by adding
   '# -*- SkipSchemaAnnotations' anywhere in the file.
 * Don't show column limits for integer and boolean types.
